[package]
name = "gm"
version = "0.1.0"
authors = ["wuya51 <wuya51@gmail.com>"]
edition = "2021"

[dependencies]
linera-sdk = { path = "../../linera-sdk" }
linera-views = { path = "../../linera-views" }
serde = { workspace = true }

[lib]
name = "gm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # 必须包含rlib

[[bin]]
name = "gm_contract"
path = "src/contract.rs"

[[bin]]
name = "gm_service"
path = "src/service.rs"
